--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="/home/primoz/AndroidDatoteke/racVPredstavnost/libs/gdx-backend-android.jar"/>
 	<classpathentry kind="lib" path="/home/primoz/AndroidDatoteke/racVPredstavnost/libs/gdx.jar"/>
+	<classpathentry kind="lib" path="/home/primoz/AndroidDatoteke/racVPredstavnost/libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="/home/primoz/AndroidDatoteke/racVPredstavnost/libs/gdx-natives.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
